# prime_ko_justin

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: conf.py  example.ipynb
prime_jk3938/: CHANGELOG.md  README.md  __init__.py  pyproject.toml  setup.py
prime_jk3938.egg-info/: PKG-INFO  SOURCES.txt
prime_jk3938/docs/: Makefile  make.bat
prime_jk3938/src/prime_jk3938/: prime_jk3938.py
prime_jk3938/tests/: HW 7 - Build your own Python Package.ipynb  test_prime_jk3938.py
tests/: test_prime_jk3938.py
