[tool.poetry]
name = "prime_jk3938"
version = "0.1.0"
description = "Starting to build my own Python package."
authors = ["Justin Ko"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
